--- a/hw_1/HW_1.html
+++ b/hw_1/HW_1.html
@@ -9,9 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Alec Rospierski" />
 
 
-<title>HW_1.knit</title>
+<title>Homework 1</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -361,19 +362,27 @@ pre code {
 
 
 
+<h1 class="title toc-ignore">Homework 1</h1>
+<h4 class="author">Alec Rospierski</h4>
+<h4 class="date">September 7th, 2022</h4>
 
 </div>
 
 
-<br>
-<center>
-<div id="homework-1" class="section level1">
-<h1>Homework 1</h1>
-<em>Alec Rospierski</em>
-</center>
-<p><br><br> 1. Calculate the following numerical results to three
-decimal places using R. [Note: Function “ln” means the natural log
-function]</p>
+<style type="text/css">
+  h1.title {
+    margin-top: 5rem;
+    text-align: center;
+  }
+  h4.author {
+    text-align: center;
+  }
+  h4.date {
+    text-align: center;
+  }
+</style>
+<p><br> 1. Calculate the following numerical results to three decimal
+places using R. [Note: Function “ln” means the natural log function]</p>
 <ol style="list-style-type: lower-alpha">
 <li><span class="math inline">\((7 - 8) + 5^3 - 5 / 6 +
 \sqrt{62}\)</span></li>
@@ -436,7 +445,6 @@ and (if applicable) legends. Write one or two sentences to explain what
 information or hypothesis can be gleaned from each plot. You are
 recommended to conduct and document the analysis using R Markdown.</li>
 </ol>
-</div>
 
 
 
